--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -148,8 +148,8 @@
 			{{/each}}
 		</div>
 		<div class="actions-container has-actions" data-actionbartype="actions" data-title="{{hudData.settings.localize.mainactions}}">
-			<div class="action-element" data-type="trigger" data-set="setp" data-itemname="{{hudData.setp.active.primary.data.name}}" style="background-image: url({{hudData.sets.active.primary.data.img}})">
-				<span class="action-element-title">{{hudData.setp.active.primary.data.name}}</span>
+			<div class="action-element" data-type="trigger" data-set="setp" data-itemname="{{hudData.sets.active.primary.data.name}}" style="background-image: url({{hudData.sets.active.primary.data.img}})">
+				<span class="action-element-title">{{hudData.sets.active.primary.data.name}}</span>
 			</div>
 			<div class="action-element-container">
 				<div class="action-element ech-blur" data-type="trigger" data-itemname="{{hudData.other.specialItemsNames.disengage}}" style="background-image: url(modules/enhancedcombathud/icons/journey.svg)">
