--- a/styles/PortraitHUD.css
+++ b/styles/PortraitHUD.css
@@ -16,6 +16,15 @@
     pointer-events: all;
 }
 
+.portrait-hud-image{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -10;
+}
+
 .portrait-stat-block {
     align-items: center;
     border: 1px solid transparent;
