--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -24,7 +24,8 @@
 			<li class="ability ability-title">{{hudData.settings.localize.saves}} / {{hudData.settings.localize.skills}} / {{hudData.settings.localize.tools}}</li>
 		</ul>
 	</div>
-	<div class="portrait-hud" style="background-image: url({{hudData.actor.data.img}});">
+	<div class="portrait-hud">
+		<div class="portrait-hud-image" style="background-image: url({{hudData.actor.data.img}});"></div>
 		<div class="portrait-stat-block">
 			<span data-hp-value="{{hudData.actor.data.data.attributes.hp.value}}"></span>
 			&nbsp;/&nbsp;<span data-hp-max="{{hudData.actor.data.data.attributes.hp.max}}"></span>
