--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -25,7 +25,7 @@
 		</ul>
 	</div>
 	<div class="portrait-hud">
-		<div class="portrait-hud-image" style="background-image: url('{{hudData.actorimg}}');"></div>
+		<div class="portrait-hud-image" style="background-image: url('{{hudData.actor.img}}');"></div>
 		<div class="portrait-stat-block">
 			<span data-hp-value="{{hudData.actor.system.attributes.hp.value}}"></span>
 			&nbsp;/&nbsp;<span data-hp-max="{{hudData.actor.system.attributes.hp.max}}"></span>
