fix: Add missing blur classes

--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -190,14 +190,14 @@
 			</div>
 		</div>
 			<div class="action-element-container">
-				<div class="action-element" data-type="trigger" data-itemname="{{hudData.other.specialItemsNames.dash}}" style="background-image: url(modules/enhancedcombathud/icons/walking-boot.svg)">
+				<div class="action-element ech-blur" data-type="trigger" data-itemname="{{hudData.other.specialItemsNames.dash}}" style="background-image: url(modules/enhancedcombathud/icons/walking-boot.svg)">
 					<span class="action-element-title">{{hudData.other.specialItemsNames.dash}}</span>
 				</div>
-				<div class="action-element" data-type="trigger" data-itemname="{{hudData.other.specialItemsNames.shove}}" style="background-image: url(modules/enhancedcombathud/icons/shield-bash.svg)">
+				<div class="action-element ech-blur" data-type="trigger" data-itemname="{{hudData.other.specialItemsNames.shove}}" style="background-image: url(modules/enhancedcombathud/icons/shield-bash.svg)">
 					<span class="action-element-title">{{hudData.other.specialItemsNames.shove}}</span>
 				</div>
 			</div>
-			<div class="action-element"  data-type="menu" data-actiontype="actions" data-itemtype="consumables" data-menu="is-consumables" style="background-image: url(modules/enhancedcombathud/icons/drink-me.svg)">
+			<div class="action-element ech-blur"  data-type="menu" data-actiontype="actions" data-itemtype="consumables" data-menu="is-consumables" style="background-image: url(modules/enhancedcombathud/icons/drink-me.svg)">
 				<span class="action-element-title">{{hudData.settings.localize.useitem}}</span>
 			</div>
 		</div>
@@ -207,15 +207,15 @@
 			<div class="action-element primary-element" data-type="trigger" data-atype="bonus" data-set="sets" data-itemname="{{hudData.sets.active.secondary.name}}" style="background-image: url({{hudData.sets.active.secondary.img}})">
 				<span class="action-element-title">{{hudData.sets.active.secondary.name}}</span>
 			</div>
-			<div class="action-element bonus-action" data-type="menu" data-actiontype="bonus" data-itemtype="spells" data-menu="is-spells" style="background-image: url(modules/enhancedcombathud/icons/spell-book.svg)">
+			<div class="action-element bonus-action ech-blur" data-type="menu" data-actiontype="bonus" data-itemtype="spells" data-menu="is-spells" style="background-image: url(modules/enhancedcombathud/icons/spell-book.svg)">
 				<span class="action-element-title">{{hudData.settings.localize.castspell}}</span>
 			</div>
-			<div class="action-element bonus-action" data-type="menu" data-actiontype="bonus" data-itemtype="special" data-menu="is-powers"  style="background-image: url(modules/enhancedcombathud/icons/mighty-force.svg)">
+			<div class="action-element bonus-action ech-blur" data-type="menu" data-actiontype="bonus" data-itemtype="special" data-menu="is-powers"  style="background-image: url(modules/enhancedcombathud/icons/mighty-force.svg)">
 				<span class="action-element-title">{{hudData.settings.localize.usepower}}</span>
 			</div>
 		</div>
 		<div class="actions-container" data-actionbartype="free" data-title="{{hudData.settings.localize.specialaction}}">
-			<div class="action-element free-action" data-type="menu" data-actiontype="free" data-itemtype="special" data-menu="is-powers"  style="background-image: url(modules/enhancedcombathud/icons/mighty-force.svg)">
+			<div class="action-element free-action ech-blur" data-type="menu" data-actiontype="free" data-itemtype="special" data-menu="is-powers"  style="background-image: url(modules/enhancedcombathud/icons/mighty-force.svg)">
 				<span class="action-element-title">{{hudData.settings.localize.usepower}}</span>
 			</div>
 		</div>
@@ -223,15 +223,15 @@
 			<div class="action-element primary-element" data-type="trigger"  data-atype="reaction" data-set="setp" data-itemname="{{hudData.sets.active.primaryname}}" style="background-image: url({{hudData.sets.active.primaryimg}})">
 				<span class="action-element-title">{{hudData.sets.active.primaryname}}</span>
 			</div>
-			<div class="action-element reaction" data-type="menu" data-actiontype="reactions" data-itemtype="spells" data-menu="is-spells" style="background-image: url(modules/enhancedcombathud/icons/spell-book.svg)">
+			<div class="action-element reaction ech-blur" data-type="menu" data-actiontype="reactions" data-itemtype="spells" data-menu="is-spells" style="background-image: url(modules/enhancedcombathud/icons/spell-book.svg)">
 				<span class="action-element-title">{{hudData.settings.localize.castspell}}</span>
 			</div>
-			<div class="action-element reaction" data-type="menu" data-actiontype="reactions" data-itemtype="special" data-menu="is-powers"  style="background-image: url(modules/enhancedcombathud/icons/mighty-force.svg)">
+			<div class="action-element reaction ech-blur" data-type="menu" data-actiontype="reactions" data-itemtype="special" data-menu="is-powers"  style="background-image: url(modules/enhancedcombathud/icons/mighty-force.svg)">
 				<span class="action-element-title">{{hudData.settings.localize.usepower}}</span>
 			</div>
 		</div>
 		<div class="actions-container" data-passcont="true" data-title="{{hudData.settings.localize.pass}}">
-			<div class="action-element end-turn" data-pass="true" style="background-image: url(modules/enhancedcombathud/icons/duration.svg)">
+			<div class="action-element end-turn ech-blur" data-pass="true" style="background-image: url(modules/enhancedcombathud/icons/duration.svg)">
 				<span class="action-element-title">{{hudData.settings.localize.endturn}}</span>
 			</div>
 		</div>
