--- a/styles/ActionHUD.css
+++ b/styles/ActionHUD.css
@@ -18,7 +18,7 @@
 }
 .actions-container:before {
   align-items: center;
-  backdrop-filter: blur(6px);
+  backdrop-filter: var(--ech-blur-amount);
   border: 1px solid transparent;
   bottom: -55px;
   content: attr(data-title);
