--- a/styles/PortraitHUD.css
+++ b/styles/PortraitHUD.css
@@ -4,7 +4,7 @@
     background: transparent center top no-repeat;
     background-size: var(--ech-portrait-size);
     border: 1px solid transparent;
-    backdrop-filter: blur(6px);
+    backdrop-filter: var(--ech-blur-amount);
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -409,7 +409,7 @@
 
 .movement-hud {
     align-items: center;
-    backdrop-filter: blur(6px);
+    backdrop-filter: var(--ech-blur-amount);
     border: 1px solid transparent;
     display: flex;
     flex-direction: column;
@@ -449,3 +449,4 @@
     max-width: 25px;
     width: 100%;
 }
+
