--- a/styles/ECH.css
+++ b/styles/ECH.css
@@ -5,6 +5,7 @@
   --ech-mainAction-base-background: #414B55E6;
   --ech-mainAction-base-color: #B4D2DCFF;
   --ech-mainAction-base-border: #757f89FF;
+  --ech-mainAction-background-color: #0000004d;
   --ech-mainAction-hover-background: #bfc9d3e6;
   --ech-mainAction-hover-color: #B4D2DCFF;
   --ech-mainAction-hover-border: #757f89FF;
