--- a/styles/theme.css
+++ b/styles/theme.css
@@ -94,13 +94,13 @@
 /* ========== ActionHud.css - Features Containers ========== */
 .feature-accordion-title {
 	/* ADD THEME OPTIONS */
-    background-color: rgb(0 0 0 / 30%);
+    background-color: var(--ech-mainAction-background-color);
     border-color: var(--ech-mainAction-base-border);
 	color: rgb(200 200 200);
 }
 .feature-spell-slots {
 	/* ADD THEME OPTIONS */
-  	background-color: rgb(0 0 0 / 30%);
+  	background-color: var(--ech-mainAction-background-color);
 	border-color: var(--ech-mainAction-base-border);
 }
 .feature-spell-slots .spell-slot {
