--- a/styles/ActionHUD.css
+++ b/styles/ActionHUD.css
@@ -13,9 +13,15 @@
   margin-bottom: 55px;
   padding: 0px 0.5rem;
   position: relative;
+  z-index: 1;
 
   pointer-events: all;
 }
+
+.actions-container.hidden, .actions-container.hidden:before {
+  display: none;
+}
+
 .actions-container:before {
   align-items: center;
   backdrop-filter: var(--ech-blur-amount);
@@ -51,13 +57,11 @@
   transition: all 0.3s ease-in-out;
 }
 
-.action-element[data-set=setp],
-.action-element[data-set=sets] {
+.action-element.item-button {
   background-origin: border-box;
   background-size: cover;
 }
-.action-element[data-set=setp]:hover,
-.action-element[data-set=sets]:hover {
+.action-element.item-button:hover {
   filter: brightness(150%);
 }
 .action-element.has-count:before {
@@ -96,8 +100,7 @@
   width: 100%;
 }
 
-.action-element[data-set=sets] .action-element-title,
-.action-element[data-set=setp] .action-element-title {
+.action-element.item-button .action-element-title {
   align-items: center;
   backdrop-filter: blur(6px);
   background-color: rgb(0 0 0 / 30%);
@@ -146,6 +149,11 @@
 .features-container.show {
   opacity: 1;
   transform: translateY(0px);
+}
+
+.features-container:not(.is-spells){
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .features-accordion {
