--- a/styles/ECH.css
+++ b/styles/ECH.css
@@ -86,6 +86,7 @@
   transform-origin: bottom left;
   /* USED TO ALLOW USERS TO CLICK THROUGH AND AROUND ECH*/
   pointer-events: none;
+  transition: all 0.2s ease-in-out;
   z-index: 100;
 }
 .extended-combat-hud.loaded {
