--- a/styles/ActionHUD.css
+++ b/styles/ActionHUD.css
@@ -312,3 +312,7 @@
   text-shadow: 0 0 10px rgba(0 0 0 / 90%);
   width: 100%;
 }
+
+#players.ech-hidden, #hotbar.ech-hidden, #fps.ech-hidden{
+  display: none !important;
+}
