--- a/templates/partials/ActionPanel.hbs
+++ b/templates/partials/ActionPanel.hbs
@@ -1,3 +1,7 @@
 		<div class="actions-container">
-
+<div class="actions-uses-container">
+	{{#each maxActions}}
+		<div class="action-pip"></div>
+	{{/each}}
+</div>
 		</div>
